// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseInput - basic functionality: After gets correct error prop 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": true,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`BaseInput - basic functionality: After gets correct props 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`BaseInput - basic functionality: Base input has correct props 1`] = `
Object {
  "aria-invalid": false,
  "aria-required": false,
  "children": null,
  "disabled": false,
  "id": "bui-mock-id",
  "onBlur": [Function],
  "onChange": [MockFunction],
  "onFocus": [Function],
  "placeholder": "Placeholder",
  "styled-component": "true",
  "type": "text",
  "value": "input value",
}
`;

exports[`BaseInput - basic functionality: Before gets correct error prop 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": true,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`BaseInput - basic functionality: Before gets correct props 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;
